--- a/public/test.html
+++ b/public/test.html
@@ -1,5 +1,8 @@
 <head>
-    <script src="dice.js"></script>
-    <script src="yatzy_game.js"></script>
-    <script src="yatzy_engine.js"></script>
+    <script type = "module" src="dice.js"></script>
+    <script type = "module" src="yatzy_game.js"></script>
+    <script type = "module" src="yatzy_engine.js"></script>
 </head>
+<body>
+    <h1>Yatzy</h1>
+</body>
