Fixed HTMl formatting

--- a/public/test.html
+++ b/public/test.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+
+<html>
 <head>
+    <title>Yatzy</title>
+</head>
+<body>
+    <h1>Yatzy Game</h1>
     <script type = "module" src="dice.js"></script>
     <script type = "module" src="yatzy_game.js"></script>
     <script type = "module" src="yatzy_engine.js"></script>
-</head>
-<body>
-    <h1>Yatzy</h1>
 </body>
+</html>
